--- a/package.json
+++ b/package.json
@@ -15,8 +15,19 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "gmaps-heatmap": "^1.0.2",
+    "google-map-react": "^2.2.0",
     "heatmap-ts": "^0.0.5",
     "heatmap.js": "^2.0.5",
+    "leaflet": "^1.9.3",
+    "leaflet.heat": "^0.2.0",
+    "lodash.filter": "^4.3.0",
+    "lodash.foreach": "^4.2.0",
+    "lodash.isnumber": "^3.0.3",
+    "lodash.map": "^4.3.0",
+    "lodash.max": "^4.0.0",
+    "lodash.min": "^4.0.0",
+    "lodash.pluck": "^3.1.2",
+    "lodash.reduce": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loadable": "^5.5.0",
@@ -24,6 +35,7 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "simpleheat": "^0.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
